[build-system]
requires = ["setuptools>=75.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reecon"
description = "Core components for reecon"
dynamic = ["dependencies", "version"]
requires-python = ">= 3.13.0"
authors = [
    {name = "spiceworm", email = "me@reecon.xyz"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://www.reecon.xyz/"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
