[project]
name = "reecon"
version = "0.3.10"
description = "Core components for reecon"
authors = [{ name = "spiceworm", email = "me@reecon.xyz" }]
requires-python = "== 3.13.2"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "django==5.2.1",
    "django-constance[redis]==4.3.2",
    "django-redis==5.4.0",
    "django-rq==3.0.1",
    "djangorestframework==3.16.0",
    "hiredis==3.1.1",
    "ipython>=9.0.2",
    "langchain[openai]==0.3.25",
    "markdown==3.8",
    "praw==7.8.1",
    "psycopg[c]==3.2.9",
    "pydantic==2.11.4",
    "python-decouple==3.8",
    "tenacity==9.1.2",
]

[project.urls]
Homepage = "https://www.reecon.xyz/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reecon"]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
    "pytest-django>=4.11.1",
]
